--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -19,7 +19,7 @@
 <div class = 'flash'>
 		      {% with messages = get_flashed_messages() %}
       {% if messages %}
-          
+
         <ul>
         {% for message in messages %}
             <li> <strong> {{ message }} </strong> </li>
@@ -29,13 +29,18 @@
     {% endwith %}
 
 </div>
-	
+
 	<div class="row padding-top padding-bottom">
 		<div class="col-md-1"></div>
 		<div class="col-md-10 padding-none">
 			<a href="{{url_for('newRestaurant')}}">
 				<button class="btn btn-default" id="new-restaurant">
 					<span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>Add Restaurant
+				</button>
+			</a>
+			<a href="{{url_for('restaurantsJSON')}}">
+				<button class="btn btn-default" id="new-restaurant">
+					<span class="glyphicon glyphicon-download" aria-hidden="true"></span>Restaurants JSON
 				</button>
 			</a>
 		</div>
